# ProgLab8

./: README.md
outputs/: conndata.conf  db.cfg  db1.cfg  main  script1.gl  script3.gl  valgrind-out.txt
outputs/docker/: buildDocker.sh
outputs/docker/server/: Dockerfile  script1.gl  script2.gl  script3.gl
outputs/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
outputs/tmp/jni/: Makefile  cmake_install.cmake
outputs/windows/: connect.qml
src/: ConnectionGUILabels_ru.java
src/ru/se/ifmo/prog/lab7/: buildAutoClient.sh  buildClient.sh  buildServer.sh
src/ru/se/ifmo/prog/lab7/classes/: Color.java  Coordinates.java  Dragon.java  DragonCave.java  DragonCharacter.java  DragonType.java
src/ru/se/ifmo/prog/lab7/client/: ClientThread.java  Main.java
src/ru/se/ifmo/prog/lab7/client/cores/: Console.java  UDPConnector.java  UDPReader.java  UDPSender.java
src/ru/se/ifmo/prog/lab7/commands/: Add.java  Ascending.java  Checker.java  Clear.java  Command.java  CommandShallow.java  Descending.java  Executable.java  ExecuteScript.java  Exit.java  Help.java  History.java  Info.java  Register.java  RemoveID.java  RemoveIndex.java  Response.java  Save.java  Show.java  SignIn.java  Sort.java  SumOfAge.java  UpdateID.java
src/ru/se/ifmo/prog/lab7/cores/: CollectionData.java  CommandManager.java  DatabaseConnector.java  ScriptReader.java  StringShallow.java
src/ru/se/ifmo/prog/lab7/exceptions/: CommandIOException.java  ConvertationException.java  FileInputException.java  InputArgumentException.java
src/ru/se/ifmo/prog/lab7/server/: Main.java
src/ru/se/ifmo/prog/lab7/server/cores/: UDPConnector.java  UDPReader.java  UDPSender.java
src/ru/se/ifmo/prog/lab7/server/threads/: ReadThread.java  RequestThread.java  SendThread.java
src/ru/se/ifmo/prog/lab8/: \  buildClient.sh  buildServer.sh  databaseGenerator.sql
src/ru/se/ifmo/prog/lab8/classes/: Color.java  Coordinates.java  Dragon.java  DragonCave.java  DragonCharacter.java  DragonType.java
src/ru/se/ifmo/prog/lab8/client/back/: Main.java
src/ru/se/ifmo/prog/lab8/client/gui/: CMakeLists.txt  main.cpp
src/ru/se/ifmo/prog/lab8/client/gui/jni/: CMakeLists.txt  jvmConnector.cpp  jvmConnector.h
src/ru/se/ifmo/prog/lab8/client/gui/windows/: commandWindow.cpp  commandWindow.h  connectionWindow.cpp  connectionWindow.h  creationWindow.cpp  creationWindow.h  dragonField.cpp  dragonField.h  dragonInfo.cpp  dragonInfo.h  filter.cpp  filter.h  helpfulStuff.h  mainPage.cpp  mainPage.h
src/ru/se/ifmo/prog/lab8/commands/: .UpdateID.java.swp  Add.java  Ascending.java  Checker.java  Clear.java  Command.java  CommandShallow.java  Descending.java  Executable.java  ExecuteScript.java  Exit.java  Help.java  History.java  Info.java  Register.java  RemoveID.java  RemoveIndex.java  Response.java  Save.java  Show.java  SignIn.java  Sort.java  SumOfAge.java  UpdateID.java
src/ru/se/ifmo/prog/lab8/cores/: CollectionData.java  CommandManager.java  DatabaseConnector.java  ScriptReader.java  StringShallow.java
src/ru/se/ifmo/prog/lab8/exceptions/: CommandIOException.java  ConvertationException.java  FileInputException.java  InputArgumentException.java
src/ru/se/ifmo/prog/lab8/server/: Main.java
src/ru/se/ifmo/prog/lab8/server/cores/: UDPConnector.java  UDPReader.java  UDPSender.java
(+20 files in other folders)
